test/visibility/rename/renameUsedMod/renameExceptAll2.chpl
module Foo {
  var x: bool;
}

module User {
  use Foo as Bar except *;

  proc main() {
    writeln(x); // Should fail, renaming shouldn't break `except *;`
  }
}
